--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,7 +34,8 @@ jobs:
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./
-          destination: ./_site
+          # destination: ./_site
+          # destination: ./dist
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
